--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,235 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="38" data-price="9.91">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WkJ2kZ"><img src="https://m.media-amazon.com/images/I/81FZz12EJIL._SR400,400_.jpg" alt="Tea Infuser Set by Chefast" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>38% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WkJ2kZ">Tea Infuser Set by Chefast (2+1 Pack) - Combo Kit of 1 Large and 2 Single Cup Infusers, Plus Metal Scoop...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.91</span><span class="ori_price">$15.99</span></address>
+      <p><span>Take <strong>38% off at $15.99</strong> with promo code: <strong>38OSNSUR</strong></span></p>
+      <span class="ex_date">Expiration Date :  May 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WkJ2kZ">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="17.08">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WgC6pe"><img src="https://m.media-amazon.com/images/I/61aOzk4NJlL._SR400,400_.jpg" alt="Travel Makeup Train Case" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WgC6pe">Travel Makeup Train Case Makeup Cosmetic Case Organizer Portable Artist Storage Bag 10.3'' with Adjustable Dividers</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.08</span><span class="ori_price">$18.98</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>10% off at $18.98</strong> with promo code: <strong>10FL7LWI</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WgC6pe">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="5.84">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VK4yeI"><img src="https://m.media-amazon.com/images/I/71xrsVLXdeL._SR400,400_.jpg" alt="BABI BEAR Makeup Brushes" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VK4yeI">BABI BEAR Makeup Brushes 10 PCs Makeup Brushes Set Premium Synthetic Foundation Powder Fan Concealers Eye Shadows Makeup Brush Set</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.84</span><span class="ori_price">$12.99</span></address>
+      <p><span>Take <strong>55% off at $12.99</strong> with promo code: <strong>555WAUQO</strong></span></p>
+      <span class="ex_date">Expiration Date : May 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VK4yeI">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="11.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WkXoCc"><img src="https://m.media-amazon.com/images/I/710nJ5yx-AL._SR400,400_.jpg" alt="Light Up Lightsaber Chopsticks" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WkXoCc">Light Up Lightsaber Chopsticks -Durable Lightweight Portable BPA Free and Food Safe Kitchen Dinner Party Tableware Gifts- Blue</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.49</span><span class="ori_price">$22.99</span></address>
+      <p><span>Take <strong>50% off at $22.99</strong> with promo code: <strong>501S4G1A</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 01, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WkXoCc">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="14.84">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YHQvrZ"><img src="https://m.media-amazon.com/images/I/81aOjeG6dAL._SR400,400_.jpg" alt="Sunvito Bath Bombs" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YHQvrZ">Sunvito Bath Bombs Gift Set,Natural Essential Oils Soothing&Moist Skin/Relieve Dry Skin Perfect for Bubble & Spa Bath,3oz Each Ball</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.84</span><span class="ori_price">$26.99</span></address>
+      <p><span>Take <strong>45% off at $26.99</strong> with promo code: <strong>45AW8NY7</strong></span></p>
+      <span class="ex_date">Expiration Date : May 23, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YHQvrZ">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wh6vnp"><img src="https://m.media-amazon.com/images/I/61f+0ZdMhPL._SR400,400_.jpg" alt="BriGenius Men's Electric Foil Shaver" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wh6vnp">BriGenius Men's Electric Foil Shaver, USB Rechargeable Cordless Electric Razor with Pop-Up Beard Trimmer</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $29.99</strong> with promo code: <strong>30CQCLUR</strong></span></p>
+      <span class="ex_date">Expiration Date : May 23, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wh6vnp">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="26.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MfUMRY"><img src="https://m.media-amazon.com/images/I/71ba2tHFKZL._SR400,400_.jpg" alt="Portable Blender" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MfUMRY">3 in 1 Portable Blender, Personal Blender w/ Charger, Electric Shaker Bottle, Cordless USB Rechargeable Juicer for Shakes, Smoothie and Juice</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$26.39</span><span class="ori_price">$43.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $43.99</strong> with promo code: <strong>404X9DV8</strong></span></p>
+      <span class="ex_date">Expiration Date :  May 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MfUMRY">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JZYtsr"><img src="https://m.media-amazon.com/images/I/61ALNphl70L._SR400,400_.jpg" alt="Facial Cleansing Brush" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JZYtsr">Facial Cleansing Brush - Waterproof Face Brush with 4 Brush Heads, Face & Body Scrubber</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.49</span><span class="ori_price">$18.99</span></address>
+      <p><span>Take <strong>50% off at $18.99</strong> with promo code: <strong>50IQDMZO</strong></span></p>
+      <span class="ex_date">Expiration Date : May 23, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JZYtsr">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="33.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2M8ON1s"><img src="https://m.media-amazon.com/images/I/61-J8ncTAbL._SR400,400_.jpg" alt="Toprime Vacuum Sealer Automatic Vacuum" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2M8ON1s">Toprime Vacuum Sealer Automatic Vacuum Air Sealing System for Keeping Dry & Moist Food Fresh | Suitable...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$33.59</span><span class="ori_price">$41.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>20% off at $41.99</strong> with promo code: <strong>20WVACUUM</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 21, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2M8ON1s">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WqEJVk"><img src="https://m.media-amazon.com/images/I/615Lp56wRGL._SR400,400_.jpg" alt="Hot Large Air Fryer Cooker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WqEJVk">Hot Large Air Fryer Cooker - Oilless Electric Best Compact Airfryer Oven 3.7QT Air Cooker Digital Fryers Mini Freidora De Aire...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$39.99</span><span class="ori_price">$79.99</span></address>
+      <p><span>Take <strong>50% off at $79.99</strong> with promo code: <strong>5038PD6W</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WqEJVk">Use Code</a>
+  </div>
+</div>
+
+
 <div class="card clearfix" data-score="55" data-price="5.98">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/30CIh6i"><img src="https://m.media-amazon.com/images/I/51gVq1LP8jL._SR400,400_.jpg" alt="Bluetooth Headphones" /></a>
