--- a/app/views/blogs/blog_01.html.erb
+++ b/app/views/blogs/blog_01.html.erb
@@ -81,9 +81,9 @@
 
       </div><!--./blog_body-->
 
-      <div class="blog_side">
-        <%= render 'blogs/sidebar' %>
-      </div>
+      <!-- <div class="blog_side">
+        < render 'blogs/sidebar' >
+      </div> -->
 
    </div><!--./warp-->
   </div><!--./blogs-->
