--- a/app/views/deals_days/day_01.html.erb
+++ b/app/views/deals_days/day_01.html.erb
@@ -11,7 +11,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Best Deals on Amazon May. 22. 2019</h2>
+          <h2>Best Deals We Picked on Amazon May. 22. 2019</h2>
           
           <div class="sort_box clearfix">
             <ul>
