--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -42,7 +42,7 @@
   .codes .card_wrap{margin:20px 0 0 0;}
   .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
   .codes .card_wrap .card .image_box{float:left;width:20%;height:167px;padding:1.5%;}
-  .codes .card_wrap .card .image_box img{width:100%;height:100%;object-fit:contain;}
+  .codes .card_wrap .card .image_box img{width:100%;height:167px;object-fit:contain;}
   .codes .card_wrap .card .image_box a{display:block;}
   .codes .card_wrap .card .inner{font-family: 'Montserrat', sans-serif;font-weight:400;border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:1.5%;}
   .codes .card_wrap .card .inner>.regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
