--- a/app/views/shared/_bestdeals_days.html.erb
+++ b/app/views/shared/_bestdeals_days.html.erb
@@ -1,3 +1,4 @@
+<li><a href="/deals_days/day_02">May. 23. 2019.</a></li>
 <li><a href="/deals_days/day_01">May. 22. 2019.</a></li>
 <!-- <li><a href="/deals_days/day_04">May. 21. 2019.</a></li>
 <li><a href="/deals_days/day_03">May. 20. 2019.</a></li>
