--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,242 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="60" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2M5smu3"><img src="https://m.media-amazon.com/images/I/612ag0xtR9L._SR400,400_.jpg" alt="TopOne Aptx Low Latency Audio Transmitter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2M5smu3">TopOne Aptx Low Latency Audio Transmitter for TV PC Headphones,Bluetooth V4.1 Transmitter and Receiver,2 in 1 Wireless Audio Adapter</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.99</span><span class="ori_price">$49.99</span></address>
+      <p><span>Take <strong>60% off at $49.99</strong> with promo code: <strong>60DPQ9VT</strong></span></p>
+      <span class="ex_date">Expiration Date : May 26, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2M5smu3">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="41.65">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30IVISn"><img src="https://m.media-amazon.com/images/I/41p7eDrI8kL._SR400,400_.jpg" alt="Yinyoo V2 in Ear Metal Earphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30IVISn">Yinyoo V2 in Ear Metal Earphones Dynamic Driver 1DD HiFi Bass Earbuds Headphones Noise Cancelling Earphones </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$41.65</span><span class="ori_price">$49.00</span></address>
+      <p><span>Take <strong>15% off at $49.00</strong> with promo code: <strong>152RYY4W</strong></span></p>
+      <span class="ex_date">Expiration Date : May 27, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/30IVISn">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="75.64">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YRP4rb"><img src="https://m.media-amazon.com/images/I/71np+rB0EtL._SR400,400_.jpg" alt="JUMO CYLY Business Laptop Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YRP4rb">JUMO CYLY Business Laptop Backpack Water Resistant Anti-Theft College Backpack with USB Charging Port Slim Laptop Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$75.64</span><span class="ori_price">$88.99</span></address>
+      <p><span>Take <strong>15% off at $88.99</strong> with promo code: <strong>15Y8B3WT</strong></span></p>
+      <span class="ex_date">Expiration Date : May 24, 2019 at 03:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YRP4rb">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="16.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2M7hY4S"><img src="https://m.media-amazon.com/images/I/6119OWqFoyL._SR400,400_.jpg" alt="BassPal Portable Bluetooth Speakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2M7hY4S">BassPal Portable Bluetooth Speakers, Small True Wireless Stereo (TWS) Speaker with Radio, IPX5 Waterproof</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.49</span><span class="ori_price">$32.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>50% off at $32.99</strong> with promo code: <strong>50R7RTVD</strong></span></p>
+      <span class="ex_date">Expiration Date : May 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2M7hY4S">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="3.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2M5tgqr"><img src="https://m.media-amazon.com/images/I/71J3raHn9AL._SR400,400_.jpg" alt="Iksnail Earbud Earphone Headphone Case" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2M5tgqr">Iksnail Earbud Earphone Headphone Case Small Mini Storage Carrying Pouch Travel Organizer Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$3.99</span><span class="ori_price">$9.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>60% off at $9.99</strong> with promo code: <strong>promo_code</strong></span></p>
+      <span class="ex_date">Expiration Date : End_date</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2M5tgqr">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="12.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2M8u1iA"><img src="https://m.media-amazon.com/images/I/51KbnTgBKSL._SR400,400_.jpg" alt="AOGUERBE Digital Alarm Clock" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2M8u1iA">AOGUERBE Digital Alarm Clock, LED 6.5" Large Digit Mirror Clock Dual USB Charging Ports, Adjustable Brightness, Big Snooze Button</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$2.59</span><span class="ori_price">$17.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $17.99</strong> with promo code: <strong>30SCSZZX</strong></span></p>
+      <span class="ex_date">Expiration Date : May 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2M8u1iA">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EwnjfZ"><img src="https://m.media-amazon.com/images/I/61fO2DGyeOL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EwnjfZ">Wireless Earbuds, 5.0 True Wireless Bluetooth Headphones 3D Stereo Sound Wireless Headphones Mini Sweatproof Sport Headsets in-Ear Noise</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.99</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>50% off at $39.99</strong> with promo code: <strong>50LFJUW6</strong></span></p>
+      <span class="ex_date">Expiration Date : May 28, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EwnjfZ">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="55.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YIdvqI"><img src="https://m.media-amazon.com/images/I/61PedOVUl7L._SR400,400_.jpg" alt="Mirror Dash Cam Car Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YIdvqI">Mirror Dash Cam Car Camera,AKASO Backup Camera 1080P Dual Dash Cam for Cars with 32GB Card 7" Touch Screen Rearview Mirror Dashcam</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$55.99</span><span class="ori_price">$79.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $79.99</strong> with promo code: <strong>30J4839L</strong></span></p>
+      <span class="ex_date">Expiration Date : May 26, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YIdvqI">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="19.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K2ioXE"><img src="https://m.media-amazon.com/images/I/51zK5jWCofL._SR400,400_.jpg" alt="Power Bank" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K2ioXE">CORNMI Power Bank 20000mAh Portable Charger Battery Pack USB Charger Bank High Capacity External Battery Compatible</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.79</span><span class="ori_price">$32.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $32.99</strong> with promo code: <strong>40POWERBANK</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 18, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K2ioXE">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="13.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30FkSkG"><img src="https://m.media-amazon.com/images/I/718mOVOmhIL._SR400,400_.jpg" alt="ELLESYE Wireless Charger" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30FkSkG">ELLESYE Wireless Charger, 3-Coil Qi Wireless Charging Stand </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.49</span><span class="ori_price">$17.99</span></address>
+      <p><span>Take <strong>25% off at $17.99</strong> with promo code: <strong>25RMKMZ2</strong></span></p>
+      <span class="ex_date">Expiration Date : May 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/30FkSkG">Use Code</a>
+  </div>
+</div>
+
+
 <div class="card clearfix" data-score="50" data-price="5.49">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2EFU9LF"><img src="https://m.media-amazon.com/images/I/51lfCsKLrgL._SR400,400_.jpg" alt="SPORTLINK Outlet Wall Mount Hanger Holder" /></a>
